# ai-and-testing

./: .env  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.deepeval/: .deepeval
dspy/: dspy1.py  dspy2.py  dspy3.py  ingest.py  rag.py
kgllm/: NOTES.md  check.py  graph.py  pipeline.py  queries.py
kgllm_v1/: config.py  extraction.py  graph.py
kgllm_v2/: evaluate1.py  evaluate2.py  extraction.py  passage.txt  pipeline.py
overlord/: overlord-001.html  overlord-002.html  overlord-003.html  overlord-spec.md
scripts/: ar-control.py  ar-model.py  cp-control.py  cp-model.py  evaluate_coherence_essay.py  evaluate_synthesis.py  evaluate_time_travel_essay.py  fth-control.py  fth-model.py  retrieval-quality-001.py  retrieval-quality-002.py  retrieval-quality-003.py  retrieval-quality-004.py
zmachine/: convert.py  generate.py  reference.py  test.py  validate.py  zmachine_header.ttl
