[project]
name = "ai-testing"
version = "0.1.0"
authors = [
  {name = "Jeff Nyman", email = "jeffnyman@gmail.com"},
]
license = "MIT"
description = "Scripts for the TesterStories AI and Testing series."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "deepeval>=3.8.4",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
]
